<?xml version="1.0"?>
<package format="2">
	<name>depth_sub</name>
	<version>3.0.0</version>
	<description>This package is subscribing to ZED depth streams</description>

	<maintainer email="yoMama@yoMamaHouse.edu"></maintainer>
	<license>IDK</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>

	<exec_depend>zed_wrapper</exec_depend>
</package>
